--- a/eds/templates/base/base_profile.html
+++ b/eds/templates/base/base_profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}{{ info_dict["name"] }}_专家详情</title>
-    <link rel="stylesheet" href="/static/resources/bootstrap3/css/bootstrap.min.css" />
+    <!--<link rel="stylesheet" href="/static/resources/bootstrap3/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="/static/resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
     <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon" />
     <style >
