--- a/eds/templates/main/expert.html
+++ b/eds/templates/main/expert.html
@@ -256,9 +256,9 @@
             <div class="container-fluid" style="padding: 0px;">
                 <div class="row" style="margin: 0px 18px 40px 18px;padding: 60px 0px 0px 0px;">
                     <!-- 头像 -->
-                    <div class="col-md-2"><img style="width:170px"  class="img-circle" id="profile-avatar" src="../../static/images/experttest.jpg"/></div>
+                    <div class="col-md-3" style="text-align: center;"><img style="width:170px"  class="img-circle" src="../../static/images/experttest.jpg"/></div>
                     <!-- 姓名+简介 -->
-                    <div class="col-md-8" style="padding: 0px 0px 0px 60px;">
+                    <div class="col-md-9" style="padding: 0px 0px 0px 60px;">
                         <h2 class="my-title1" style="padding: 20px 0px">吴恩达<small class="my-text1" style="color:#95959E;padding-left:30px;">东南大学计算机学院 教授</small></h2>
                         <p class="my-text1" style="padding: 25px 0px 0px 0px">研究领域：机器学习 人工智能 深度学习 社会网络 自然语言处理</p>
                     </div>
@@ -290,9 +290,18 @@
         </ul>
       </div>
       <!--选项卡内容Start-->
-      <div id="myTabContent" class="tab-content col-lg-8">
-        <div class="tab-pane fade in active" id="page1">
-            1
+      <div id="myTabContent" class="tab-content" style="margin:0;width:100%;text-align:left;">
+          <!--选项卡——基本信息-->
+        <div class="tab-pane fade in active container-fluid" id="page1" style="padding: 0px;background-color: #FBFBFA">
+
+                <div class="row" style="margin: 0px 20%;padding: 20px 60px;">
+                    <ul >
+                        <li class="glyphicon glyphicon-user"></li>
+                        <strong>姓名</strong>
+                        <span>吴恩达</span>
+                    </ul>
+                </div>
+
         </div>
 
         <div class="tab-pane fade col-lg-10" id="page2">
