--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="col-md-1" >
-                    <button type="button" class="btn btn-default navbar-btn"  @click="closeSearchDiv()"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;"><i class="glyphicon glyphicon-remove" style="padding-left:10px;"></i></button>
+                    <button type="button" class="btn btn-default navbar-btn mybtn"  @click="closeSearchDiv()"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;"><i class="glyphicon glyphicon-remove" style="padding-left:10px;"></i></button>
                 </div>
 
             </div>
@@ -71,7 +71,7 @@
         <div id="myHeader" class="container-fluid" style="margin-bottom:0;min-height: 80px;background-color:#FFFFFF;border-bottom: 1px solid #282828;">
             <div class="row" style="margin: 0 5%;padding: 0px">
                 <div class="col-md-1 div_line">
-                    <button type="button" class="btn btn-default navbar-btn" style="padding:30px 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
+                    <button type="button" class="btn btn-default navbar-btn mybtn" style="padding:30px 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
                 </div>
                 <div class="col-md-1 div_line" style="padding:27px 0px 0px 10px;margin:0;">
                     <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">反馈建议</a>
@@ -83,7 +83,7 @@
                 <div class="col-md-1 div_line">
                 </div>
                 <div class="col-md-1 div_line">
-                    <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
+                    <button type="button" class="btn btn-default navbar-btn mybtn" id="bt_display" @click="openSearchDiv"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
                 </div>
                 <div class="col-md-1 div_line" style="padding:27px 10px 0px 0px;margin:0;">
                     <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 录</a>
