--- a/eds/templates/main/expert.html
+++ b/eds/templates/main/expert.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/expertstyle.css') }}" media="screen"/>
     <script src="/static/resources/flat-ui-2.2.2-dist/js/vendor/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="/static/resources/bootstrap3/css/bootstrap.min.css" />
     <script src="{{ url_for('static', filename='resources/echarts/myecharts.source.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='js/expertjs.js') }}" type="text/javascript"></script>
 
