--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -18,6 +18,7 @@
         .div_line{
          width:auto;
         display:inline-block;
+            line-height: 80px;
         }
     </style>
     {% block head %}{% endblock %}
@@ -69,24 +70,25 @@
         </div>
         <!--导航条-->
         <div id="myHeader" class="container-fluid" style="margin-bottom:0;min-height: 80px;background-color:#FFFFFF;border-bottom: 1px solid #282828;">
-            <div class="row" style="margin: 0 5%;padding: 0px">
-                <div class="col-md-1 div_line">
-                    <button type="button" class="btn btn-default navbar-btn" style="padding:30px 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
+            <div class="row" style="margin: 0;padding: 0px; ">
+                <div class=" div_line">
+                    <button type="button" class="btn btn-default navbar-btn" style="padding:0 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
                 </div>
-                <div class="col-md-1 div_line" style="padding:27px 0px 0px 10px;margin:0;">
+                <div class=" div_line" style="padding:0px 0px 0px 15px;margin:0;">
                     <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">反馈建议</a>
                 </div>
-                <div class="col-md-1 div_line"></div>
-                <div class="col-md-6 div_line" style="text-align:center;padding-top:25px;">
-                    <a href="#"><img style="height:30px;"  src="../../static/images/expertlogo.png"/></a>
+                <div class=" div_line"></div>
+                <div class=" div_line" style="text-align:center; ">
+                    <a href="#"><img style=" height:30px;    position: absolute; left: 39%; top: 22px;"  src="../../static/images/expertlogo.png"/></a>
                 </div>
-                <div class="col-md-1 div_line">
+                <div class=" div_line">
                 </div>
-                <div class="col-md-1 div_line">
-                    <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
-                </div>
-                <div class="col-md-1 div_line" style="padding:27px 10px 0px 0px;margin:0;">
+
+                <div class=" div_line" style="padding:0px 40px 0px 0px;margin:0;float:right">
                     <a href="#" style="line-height: 0;font-size: 1.45rem;color:#282828;">登 录</a>
+                </div>
+                <div class=" div_line" style="float:right">
+                    <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:0px 15px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
                 </div>
 
             </div>
