--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-1 div_line">
                 </div>
-                <div class="col-md-1 div_line">
+                <div class="col-md div_line">
                     <button type="button" class="btn btn-default navbar-btn" id="bt_display" @click="openSearchDiv"  style="padding:30px 40px 0px 0px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">搜 索<i class="glyphicon glyphicon-search" style="padding-left:10px;"></i></button>
                 </div>
                 <div class="col-md-1 div_line" style="padding:27px 10px 0px 0px;margin:0;">
