--- a/eds/templates/base/base.html
+++ b/eds/templates/base/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block titlename %}{% endblock %}</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <!--<link rel="stylesheet" href="/static/resources/bootstrap3/css/bootstrap.min.css" />-->
+    <link rel="stylesheet" href="/static/resources/bootstrap3/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/resources/flat-ui-2.2.2-dist/css/flat-ui.min.css"/>
     <script src="/static/resources/flat-ui-2.2.2-dist/js/vendor/jquery.min.js"></script>
     <script src="/static/resources/bootstrap3/js/bootstrap.min.js"></script>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <!--导航条-->
-       <div id="myHeader" class="container-fluid" style="margin-bottom:0;min-height: 80px;background-color:#FFFFFF;border-bottom: 1px solid #282828;">
+       <div id="myHeader" class="container-fluid" style="margin-bottom:0;min-height: 80px;background-color:#FFFFFF;">
             <div class="row" style="margin: 0;padding: 0px; ">
                 <div class=" div_line">
                     <button type="button" class="btn btn-default navbar-btn" style="padding:0 0px 0px 40px;margin:0;font-size: 1.45rem;color:#282828;background-color:#fff;">发 现</button>
